# axonyx-framework

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  docker-axonyx.yml
crates/axonix-adapter-blokbite/: Cargo.toml
crates/axonix-adapter-blokbite/src/: lib.rs
crates/axonix-core/: Cargo.toml
crates/axonix-core/src/: ax_ast.rs  ax_backend_ast.rs  ax_backend_codegen.rs  ax_backend_lowering.rs  ax_backend_parser.rs  ax_query_ast.rs  ax_sql.rs  layout.rs  lib.rs  pipeline_render.rs  reactive.rs  ui.rs
crates/axonix-core/tests/: component_macro.rs
crates/axonix-macros/: Cargo.toml
crates/axonix-macros/src/: lib.rs
crates/axonix-runtime/: Cargo.toml
crates/axonix-runtime/examples/: execute_json.rs
crates/axonix-runtime/src/: backend.rs  lib.rs
crates/axonyx-core/: Cargo.toml
crates/axonyx-core/src/: ax_ast.rs  ax_backend_ast.rs  ax_backend_codegen.rs  ax_backend_lowering.rs  ax_lowering.rs  ax_parser.rs  layout.rs  lib.rs  pipeline_render.rs  reactive.rs  ui.rs
crates/axonyx-core/tests/: component_macro.rs
crates/axonyx-macros/: Cargo.toml
crates/axonyx-macros/src/: lib.rs
crates/axonyx-runtime/: Cargo.toml
crates/axonyx-runtime/examples/: execute_json.rs
crates/axonyx-runtime/src/: backend.rs  lib.rs
crates/cargo-axonix/: Cargo.toml
crates/cargo-axonix/src/: main.rs
crates/cargo-axonix/templates/docs/app/docs/: page.ax.tpl
crates/cargo-axonix/templates/docs/app/docs/getting-started/: page.ax.tpl
crates/cargo-axonix/templates/docs/app/docs/reference/: page.ax.tpl
crates/cargo-axonyx/: Cargo.toml  README.md
crates/cargo-axonyx/src/: lib.rs  main.rs
crates/cargo-axonyx/templates/docs/app/docs/: layout.ax.tpl  page.ax.tpl
crates/cargo-axonyx/templates/docs/app/docs/examples/: page.ax.tpl
crates/create-axonix/: Cargo.toml
crates/create-axonix/src/: main.rs  template.rs
crates/create-axonix/templates/minimal/: .env.example.tpl  Axonix.toml.tpl  Cargo.toml.tpl  README.md.tpl
crates/create-axonix/templates/minimal/app/: layout.ax.tpl  page.ax.tpl  pipeline.ax.tpl
crates/create-axonix/templates/minimal/app/posts/: actions.ax.tpl  loader.ax.tpl
crates/create-axonix/templates/minimal/jobs/: digest.ax.tpl
crates/create-axonix/templates/minimal/routes/api/: posts.ax.tpl
crates/create-axonix/templates/minimal/src/: main.rs.tpl
crates/create-axonix/templates/minimal/src/db/: mod.rs.tpl
crates/create-axonix/templates/minimal/src/domain/: posts.rs.tpl
crates/create-axonix/templates/minimal/src/runtime/: mod.rs.tpl
crates/create-axonix/templates/site/: README.md.tpl
crates/create-axonix/templates/site/app/: layout.ax.tpl  page.ax.tpl
crates/create-axonix/templates/site/app/posts/: actions.ax.tpl  loader.ax.tpl
crates/create-axonix/templates/site/jobs/: digest.ax.tpl
crates/create-axonyx/: Cargo.toml  README.md
crates/create-axonyx/src/: main.rs  template.rs
crates/create-axonyx/templates/blog/: Axonyx.toml.tpl  README.md.tpl  aegis.toml.tpl
crates/create-axonyx/templates/blog/app/: error.ax.tpl  layout.ax.tpl  loader.ax.tpl  not-found.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/blog/app/about/: page.ax.tpl
crates/create-axonyx/templates/blog/app/blog/[slug]/: loader.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/blog/content/posts/: foundry-notes.md.tpl  hello-axonyx.md.tpl  static-rust-sites.md.tpl
crates/create-axonyx/templates/blog/public/: brand-mark.svg.tpl  favicon.svg.tpl
crates/create-axonyx/templates/docs/: README.md.tpl  aegis.toml.tpl
crates/create-axonyx/templates/docs/app/: error.ax.tpl  layout.ax.tpl  not-found.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/docs/app/components/: page.ax.tpl
crates/create-axonyx/templates/docs/app/examples/: page.ax.tpl
crates/create-axonyx/templates/docs/app/feedback/: actions.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/docs/app/getting-started/: page.ax.tpl
crates/create-axonyx/templates/docs/app/reference/: page.ax.tpl
crates/create-axonyx/templates/docs/public/: brand-mark.svg.tpl  favicon.svg.tpl
crates/create-axonyx/templates/minimal/: .env.example.tpl  Axonyx.toml.tpl  Cargo.toml.tpl  README.md.tpl
crates/create-axonyx/templates/minimal/app/: backend.ax.tpl  error.ax.tpl  layout.ax.tpl  not-found.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/minimal/app/posts/: loader.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/minimal/jobs/: digest.ax.tpl
crates/create-axonyx/templates/minimal/public/: favicon.svg.tpl
crates/create-axonyx/templates/minimal/routes/api/: posts.ax.tpl
crates/create-axonyx/templates/minimal/src/: main.rs.tpl
crates/create-axonyx/templates/minimal/src/db/: mod.rs.tpl
crates/create-axonyx/templates/site/: README.md.tpl  aegis.toml.tpl
crates/create-axonyx/templates/site/app/: error.ax.tpl  layout.ax.tpl  not-found.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/site/app/about/: page.ax.tpl
crates/create-axonyx/templates/site/app/contact/: page.ax.tpl
crates/create-axonyx/templates/site/app/posts/: actions.ax.tpl  loader.ax.tpl  page.ax.tpl
crates/create-axonyx/templates/site/jobs/: digest.ax.tpl
crates/create-axonyx/templates/site/public/: brand-mark.svg.tpl  favicon.svg.tpl
crates/create-axonyx/templates/site/routes/api/: posts.ax.tpl
crates/create-axonyx/templates/static/src/: main.rs.tpl
docker/axonyx/: Dockerfile  README.md  entrypoint.sh
docs/: README.md  ax-v2-authoring.md  backend-authoring.md  getting-started.md  ir-v1.md  overview.md  proof-app-checklist.md  reactivity-v1.md  release-runbook.md  runtime-sources.md  templates.md  v0-1-stable-surface.md
docs/architecture/: server-runtime.md  structured-async.md
examples/: ir.posts.card.json
scripts/: smoke-core-loop.ps1  smoke-production-server.ps1  smoke-server-transports.ps1
