[workspace]
members = [
  "crates/create-axonyx",
  "crates/cargo-axonyx",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/vladanPro/axonyx-framework"
homepage = "https://github.com/vladanPro/axonyx-framework"
documentation = "https://github.com/vladanPro/axonyx-framework"
rust-version = "1.82"
version = "0.1.3"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
toml = "0.8.23"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
axonyx-core = { version = "0.1.0", path = "vendor/axonyx-runtime/crates/axonyx-core" }
axonyx-runtime = { version = "0.1.0", path = "vendor/axonyx-runtime/crates/axonyx-runtime" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
