[package]
name = "axonyx-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/vladanPro/axonyx-runtime"
homepage = "https://github.com/vladanPro/axonyx-runtime"
documentation = "https://github.com/vladanPro/axonyx-runtime"
rust-version = "1.82"
description = "Procedural macros for ergonomic Axonyx component authoring"
readme = "../../README.md"
keywords = ["axonyx", "macros", "proc-macro", "ui", "rust"]
categories = ["development-tools", "gui"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
