[package]
name = "cargo-axonyx"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "cargo-axonyx"
path = "src/bin/cargo-axonyx.rs"

[[bin]]
name = "cargo-ax"
path = "src/bin/cargo-ax.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
toml.workspace = true
serde.workspace = true
axonyx-core.workspace = true
axonyx-runtime.workspace = true
