[package]
name = "cargo-axonyx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cargo helper commands for Axonyx apps"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
autobins = false

[[bin]]
name = "cargo-axonyx"
path = "src/bin/cargo-axonyx.rs"

[[bin]]
name = "cargo-ax"
path = "src/bin/cargo-ax.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
flate2.workspace = true
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
axonyx-core.workspace = true
axonyx-runtime.workspace = true

[dev-dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
