[package]
name = "create-axonyx"
version = "0.1.11"
edition.workspace = true
license.workspace = true
description = "Scaffold a new Axonyx app"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
axonyx-core.workspace = true
